chore: theme switching packages updates, markup working.

--- a/reference/SimpleCalculator/SimpleCalculator.UI/Styles/ColorPaletteOverride.xaml
+++ b/reference/SimpleCalculator/SimpleCalculator.UI/Styles/ColorPaletteOverride.xaml
@@ -1,73 +1,68 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<ResourceDictionary.ThemeDictionaries>
-		<!-- Light Theme -->
-		<ResourceDictionary x:Key="Light">
-            <Color x:Key="StatusBarForegroundColor">#000000</Color>
-            <Color x:Key="BackgroundColor">#F1F2F3</Color>
-            <Color x:Key="SurfaceColor">#FFFFFF</Color>
-            <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
-            <Color x:Key="SecondaryColor">#D2D3DA</Color>
-            <Color x:Key="PrimaryVariantLightColor">#9679FF</Color>
-            <Color x:Key="PrimaryColor">#5946D2</Color>
-            <Color x:Key="OnSecondaryContainerColor">#1B192C</Color>
-            <Color x:Key="OnBackgroundColor">#1C1B1F</Color>
-            <Color x:Key="OnTertiaryColor">#FFFFFF</Color>
-            <Color x:Key="TertiaryColor">#4B5EFC</Color>
-            <Color x:Key="OnSurfaceColor">#1C1B1F</Color>
-            <Color x:Key="PrimaryInverseColor">#C8BFFF</Color>
-            <Color x:Key="PrimaryContainerColor">#E5DEFF</Color>
-            <Color x:Key="OnPrimaryContainerColor">#160067</Color>
-            <Color x:Key="PrimaryVariantDarkColor">#0021C1</Color>
-            <Color x:Key="SecondaryVariantDarkColor">#2BB27E</Color>
-            <Color x:Key="SecondaryVariantLightColor">#9CFFDF</Color>
-            <Color x:Key="OnSecondaryColor">#FFFFFF</Color>
-            <Color x:Key="SecondaryContainerColor">#E5DFF9</Color>
-            <Color x:Key="SurfaceInverseColor">#313033</Color>
-            <Color x:Key="OnSurfaceInverseColor">#F4EFF4</Color>
-            <Color x:Key="SurfaceVariantColor">#F2EFF5</Color>
-            <Color x:Key="OnSurfaceVariantColor">#8A8494</Color>
-            <Color x:Key="OutlineColor">#79747E</Color>
-            <Color x:Key="ErrorColor">#B3261E</Color>
-            <Color x:Key="OnErrorColor">#FFFFFF</Color>
-            <Color x:Key="ErrorContainerColor">#F9DEDC</Color>
-            <Color x:Key="OnErrorContainerColor">#410E0B</Color>
-            <Color x:Key="TertiaryContainerColor">#CFE4FF</Color>
-            <Color x:Key="OnTertiaryContainerColor">#001D36</Color>
-        </ResourceDictionary>
-
-		<!-- Dark Theme -->
-		<ResourceDictionary x:Key="Dark">
-            <Color x:Key="PrimaryColor">#544794</Color>
-            <Color x:Key="PrimaryInverseColor">#5946D2</Color>
-            <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
-            <Color x:Key="PrimaryContainerColor">#4128BA</Color>
-            <Color x:Key="OnPrimaryContainerColor">#E5DEFF</Color>
-            <Color x:Key="PrimaryVariantLightColor">#C8BFFF</Color>
-            <Color x:Key="PrimaryVariantDarkColor">#4128BA</Color>
-            <Color x:Key="SecondaryColor">#4E505F</Color>
-            <Color x:Key="OnSecondaryColor">#003823</Color>
-            <Color x:Key="SecondaryContainerColor">#474459</Color>
-            <Color x:Key="OnSecondaryContainerColor">#E5DFF9</Color>
-            <Color x:Key="BackgroundColor">#17171C</Color>
-            <Color x:Key="OnBackgroundColor">#E6E1E5</Color>
-            <Color x:Key="SurfaceColor">#2E2F38</Color>
-            <Color x:Key="SurfaceInverseColor">#E6E1E5</Color>
-            <Color x:Key="SurfaceVariantColor">#49454F</Color>
-            <Color x:Key="OnSurfaceColor">#E6E1E5</Color>
-            <Color x:Key="OnSurfaceInverseColor">#1C1B1F</Color>
-            <Color x:Key="OnSurfaceVariantColor">#CAC4D0</Color>
-            <Color x:Key="OutlineColor">#938F99</Color>
-            <Color x:Key="ErrorColor">#F2B8B5</Color>
-            <Color x:Key="OnErrorColor">#601410</Color>
-            <Color x:Key="ErrorContainerColor">#8C1D18</Color>
-            <Color x:Key="OnErrorContainerColor">#F9DEDC</Color>
-            <Color x:Key="TertiaryColor">#4B5EFC</Color>
-            <Color x:Key="OnTertiaryColor">#003259</Color>
-            <Color x:Key="OnTertiaryContainerColor">#CFE4FF</Color>
-            <Color x:Key="TertiaryContainerColor">#00497E</Color>
-        </ResourceDictionary>
-
-	</ResourceDictionary.ThemeDictionaries>
-
+<ResourceDictionary xmlns:uen="using:Uno.Extensions.Navigation.UI" xmlns:uer="using:Uno.Extensions.Reactive.UI" xmlns:utu="using:Uno.Toolkit.UI" xmlns:muxc="using:Microsoft.UI.Xaml.Controls" xmlns:um="using:Uno.Material" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+  <!--Colors-->
+  <ResourceDictionary.ThemeDictionaries>
+    <ResourceDictionary x:Key="Light">
+      <Color x:Key="StatusBarForegroundColor">#000000</Color>
+      <Color x:Key="BackgroundColor">#F2F2F7</Color>
+      <Color x:Key="TertiaryColor">#FF9500</Color>
+      <Color x:Key="OnSurfaceVariantColor">#8A8494</Color>
+      <Color x:Key="OnSecondaryContainerColor">#1B192C</Color>
+      <Color x:Key="OnBackgroundColor">#1C1B1F</Color>
+      <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+      <Color x:Key="SecondaryColor">#D2D3DA</Color>
+      <Color x:Key="OnTertiaryColor">#FFFFFF</Color>
+      <Color x:Key="OnSurfaceColor">#1C1B1F</Color>
+      <Color x:Key="SurfaceColor">#E5E5EA</Color>
+      <Color x:Key="PrimaryColor">#28CD55</Color>
+      <Color x:Key="PrimaryInverseColor">#C8BFFF</Color>
+      <Color x:Key="PrimaryContainerColor">#E5DEFF</Color>
+      <Color x:Key="OnPrimaryContainerColor">#160067</Color>
+      <Color x:Key="PrimaryVariantLightColor">#007AFF</Color>
+      <Color x:Key="PrimaryVariantDarkColor">#0021C1</Color>
+      <Color x:Key="SecondaryVariantDarkColor">#2BB27E</Color>
+      <Color x:Key="SecondaryVariantLightColor">#9CFFDF</Color>
+      <Color x:Key="OnSecondaryColor">#FFFFFF</Color>
+      <Color x:Key="SecondaryContainerColor">#E5DFF9</Color>
+      <Color x:Key="SurfaceInverseColor">#313033</Color>
+      <Color x:Key="OnSurfaceInverseColor">#F4EFF4</Color>
+      <Color x:Key="SurfaceVariantColor">#F2EFF5</Color>
+      <Color x:Key="OutlineColor">#79747E</Color>
+      <Color x:Key="ErrorColor">#B3261E</Color>
+      <Color x:Key="OnErrorColor">#FFFFFF</Color>
+      <Color x:Key="ErrorContainerColor">#F9DEDC</Color>
+      <Color x:Key="OnErrorContainerColor">#410E0B</Color>
+      <Color x:Key="TertiaryContainerColor">#CFE4FF</Color>
+      <Color x:Key="OnTertiaryContainerColor">#001D36</Color>
+    </ResourceDictionary>
+    <ResourceDictionary x:Key="Dark">
+      <Color x:Key="TertiaryColor">#FF9F0A</Color>
+      <Color x:Key="PrimaryColor">#32D74B</Color>
+      <Color x:Key="PrimaryInverseColor">#5946D2</Color>
+      <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+      <Color x:Key="PrimaryContainerColor">#4128BA</Color>
+      <Color x:Key="OnPrimaryContainerColor">#E5DEFF</Color>
+      <Color x:Key="PrimaryVariantLightColor">#0A84FF</Color>
+      <Color x:Key="PrimaryVariantDarkColor">#4128BA</Color>
+      <Color x:Key="SecondaryColor">#5C5659</Color>
+      <Color x:Key="OnSecondaryColor">#003823</Color>
+      <Color x:Key="SecondaryContainerColor">#474459</Color>
+      <Color x:Key="OnSecondaryContainerColor">#E5DFF9</Color>
+      <Color x:Key="BackgroundColor">#1C1C1E</Color>
+      <Color x:Key="OnBackgroundColor">#E6E1E5</Color>
+      <Color x:Key="SurfaceColor">#777274</Color>
+      <Color x:Key="SurfaceInverseColor">#E6E1E5</Color>
+      <Color x:Key="SurfaceVariantColor">#49454F</Color>
+      <Color x:Key="OnSurfaceColor">#E6E1E5</Color>
+      <Color x:Key="OnSurfaceInverseColor">#1C1B1F</Color>
+      <Color x:Key="OnSurfaceVariantColor">#CAC4D0</Color>
+      <Color x:Key="OutlineColor">#938F99</Color>
+      <Color x:Key="ErrorColor">#F2B8B5</Color>
+      <Color x:Key="OnErrorColor">#601410</Color>
+      <Color x:Key="ErrorContainerColor">#8C1D18</Color>
+      <Color x:Key="OnErrorContainerColor">#F9DEDC</Color>
+      <Color x:Key="OnTertiaryColor">#003259</Color>
+      <Color x:Key="OnTertiaryContainerColor">#CFE4FF</Color>
+      <Color x:Key="TertiaryContainerColor">#00497E</Color>
+    </ResourceDictionary>
+  </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
