--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/TreeViewPage.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/TreeViewPage.xaml
@@ -4,7 +4,7 @@
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-	  xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	  xmlns:toolkit="using:CommunityToolkit.WinUI.UI.Controls"
 	  xmlns:ent="using:WCTDataTreeTabSample.Entities"
 	  xmlns:selectors="using:WCTDataTreeTabSample.TemplateSelectors"
 	  mc:Ignorable="d">
