fix: reverted change from wrong branch

--- a/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
+++ b/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
@@ -8,12 +8,11 @@
     xmlns:sys="using:System"
     xmlns:vm="using:AdvancedXBind.ViewModel"
     mc:Ignorable="d"
-    Background="White"
     >
     <Page.Resources>
         <converters:DoubleToStringConverter x:Key="DoubleToStringConverter"/>
     </Page.Resources>
-    <Grid DataContext="{x:Bind vm:PlanetViewModel.Create('Jupiter')}" Margin="40" RowSpacing="20" ColumnSpacing="10" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+    <Grid DataContext="{x:Bind vm:PlanetViewModel.Create('Jupiter')}" Margin="100" RowSpacing="20" HorizontalAlignment="Stretch" VerticalAlignment="Top">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*"/>
