chore: AndroidCamera Sample - Update to net6

--- a/UI/AndroidCustomCamera/AndroidCustomCamera/AndroidCustomCamera.Shared/App.xaml
+++ b/UI/AndroidCustomCamera/AndroidCustomCamera/AndroidCustomCamera.Shared/App.xaml
@@ -2,15 +2,16 @@
     x:Class="AndroidCustomCamera.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AndroidCustomCamera"
-    RequestedTheme="Light">
+    xmlns:local="using:AndroidCustomCamera">
+	
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->
+                <!-- Add resource dictionaries here -->                
             </ResourceDictionary.MergedDictionaries>
             <!-- Add resources here -->
         </ResourceDictionary>
     </Application.Resources>
+
 </Application>
