--- a/UI/AndroidCustomCamera/AndroidCustomCamera/AndroidCustomCamera.Shared/MainPage.xaml
+++ b/UI/AndroidCustomCamera/AndroidCustomCamera/AndroidCustomCamera.Shared/MainPage.xaml
@@ -5,18 +5,19 @@
     xmlns:local="using:AndroidCustomCamera"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"    
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-		<StackPanel>
-			<Button x:Name="button"
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <StackPanel>
+            <Button x:Name="button"
 					Content="Capture Image"
 					Width="150"
 					Height="30"
 					HorizontalAlignment="Center"
 					VerticalAlignment="Center"
 					Click="button_Click" />
-			<Image x:Name="image" />
-		</StackPanel>
-	</Grid>
+            <Image x:Name="image" />
+        </StackPanel>
+    </Grid>
 </Page>
