--- a/reference/SimpleCalculator-net7/SimpleCalculator/SimpleCalculator.Shared/App.xaml
+++ b/reference/SimpleCalculator-net7/SimpleCalculator/SimpleCalculator.Shared/App.xaml
@@ -1,17 +1,24 @@
-﻿<Application
-    x:Class="SimpleCalculator.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleCalculator">
-	
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Add resource dictionaries here -->                
-            </ResourceDictionary.MergedDictionaries>
-            <!-- Add resources here -->
-        </ResourceDictionary>
-    </Application.Resources>
+﻿<Application x:Class="SimpleCalculator.App"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="using:SimpleCalculator">
+
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+				<!--  Add resource dictionaries here  -->
+				<MaterialColors xmlns="using:Uno.Material" OverrideSource="ms-appx:///Styles/ColorPaletteOverride.xaml" />
+				<MaterialFonts xmlns="using:Uno.Material" />
+				<MaterialResources xmlns="using:Uno.Material" />
+
+				<!--  Load Uno.Toolkit.UI resources  -->
+				<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
+				<MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
+
+			</ResourceDictionary.MergedDictionaries>
+			<!--  Add resources here  -->
+		</ResourceDictionary>
+	</Application.Resources>
 
 </Application>
